--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@auth0/nextjs-auth0": "^4.14.0",
 		"@radix-ui/react-avatar": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-label": "^2.1.8",
