--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently --names \"API,FRONTEND\" --prefix-colors \"blue,green\" \"npm:dev:api\" \"npm:dev:frontend\"",
-		"dev:api": "nodemon server.js",
-		"dev:frontend": "next dev",
+		"dev": "next dev",
 		"build": "next build",
-		"start": "node server.js",
+		"start": "next start",
 		"lint": "eslint"
 	},
 	"dependencies": {
@@ -18,6 +16,7 @@
 		"@radix-ui/react-progress": "^1.1.8",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"auth": "^1.2.3",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -38,6 +37,7 @@
 		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^20.19.30",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
