--- a/package.json
+++ b/package.json
@@ -6,22 +6,59 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "eslint",
+		"test": "vitest run",
+		"api": "tsx server.ts",
+		"dev:full": "concurrently \"npm run api\" \"npm run dev\""
+	},
+	"ts-node": {
+		"compilerOptions": {
+			"module": "commonjs",
+			"moduleResolution": "node"
+		},
+		"transpileOnly": true
 	},
 	"dependencies": {
 		"@auth0/nextjs-auth0": "^4.14.0",
 		"@google/generative-ai": "^0.24.1",
-		"@radix-ui/react-avatar": "^1.1.11",
-		"@radix-ui/react-dialog": "^1.1.15",
-		"@radix-ui/react-label": "^2.1.8",
-		"@radix-ui/react-progress": "^1.1.8",
-		"@radix-ui/react-select": "^2.2.6",
-		"@radix-ui/react-separator": "^1.1.8",
-		"@radix-ui/react-slot": "^1.2.4",
-		"auth": "^1.2.3",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.9",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.7",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.1.6",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.7",
+    "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.9",
+    "react-day-picker": "^8.10.1",
+    "embla-carousel-react": "^8.1.6",
+    "cmdk": "^1.1.1",
+    "vaul": "^0.9.1",
+    "react-hook-form": "^7.55.0",
+    "input-otp": "^1.2.4",
+    "react-resizable-panels": "^2.0.22",
+    "auth": "^1.2.3",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
@@ -43,11 +80,19 @@
 		"@types/node": "^20.19.30",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/supertest": "^2.0.16",
 		"concurrently": "^9.2.1",
 		"eslint": "^9",
-		"eslint-config-next": "16.1.1",
-		"nodemon": "^3.1.11",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3"
-	}
+    "eslint-config-next": "16.1.1",
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vitest": "^2.1.8",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/cookie-parser": "^1.4.8"
+  }
 }
