updated ci.yml job env with mongodb uri

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     env:
       NEXT_TELEMETRY_DISABLED: 1
       MONGOMS_DOWNLOAD_MIRROR: https://fastdl.mongodb.org # speeds up mongo-memory-server
+      MONGODB_URI: mongodb://127.0.0.1:27017/ci
+      MONGO_URI: mongodb://127.0.0.1:27017/ci
     steps:
       - name: Checkout
         uses: actions/checkout@v4
